# nn-py-cgal

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.cfg  setup.py
benchmark/: benchmark.py
example/: example.py
src/nnpycgal/: nninterpol.cpp
