[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.10.2",
    "pybind11>=2.11.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "nnpycgal"
version = "0.1"
description = "Natural Neighbor Interpolation using CGAL"
authors = [
    {name = "Jan Schindler", email = "schindlerj@landcareresearch.co.nz"}
]
requires-python = ">=3.10"
license = {file = "LICENSE.md"}
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["nnpycgal"]